--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,6 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "alive-progress>=3.3.0",
+    "numpy>=2.2.6",
+    "scipy>=1.15.3",
 ]
